[gd_scene load_steps=36 format=2]

[ext_resource path="res://Enemies/Zombie-sprite19.atlastex" type="Texture" id=1]
[ext_resource path="res://Enemies/Zombie-sprite20.atlastex" type="Texture" id=2]
[ext_resource path="res://Enemies/Zombie-sprite21.atlastex" type="Texture" id=3]
[ext_resource path="res://Enemies/Zombie-sprite15.atlastex" type="Texture" id=4]
[ext_resource path="res://Enemies/Zombie-sprite22.atlastex" type="Texture" id=5]
[ext_resource path="res://Enemies/Zombie-sprite13.atlastex" type="Texture" id=6]
[ext_resource path="res://Enemies/Zombie-sprite2.atlastex" type="Texture" id=7]
[ext_resource path="res://Enemies/Zombie-sprite.atlastex" type="Texture" id=8]
[ext_resource path="res://Enemies/Zombie-sprite3.atlastex" type="Texture" id=9]
[ext_resource path="res://Enemies/Zombie-sprite11.atlastex" type="Texture" id=10]
[ext_resource path="res://Enemies/Zombie-sprite6.atlastex" type="Texture" id=11]
[ext_resource path="res://Enemies/Zombie-sprite16.atlastex" type="Texture" id=12]
[ext_resource path="res://Enemies/Zombie-sprite17.atlastex" type="Texture" id=13]
[ext_resource path="res://Enemies/Zombie-sprite18.atlastex" type="Texture" id=14]
[ext_resource path="res://Enemies/Zombie-sprite9.atlastex" type="Texture" id=15]
[ext_resource path="res://Enemies/Zombie-sprite14.atlastex" type="Texture" id=16]
[ext_resource path="res://Enemies/Zombie-sprite4.atlastex" type="Texture" id=17]
[ext_resource path="res://Enemies/Zombie-sprite7.atlastex" type="Texture" id=18]
[ext_resource path="res://Enemies/Zombie-sprite8.atlastex" type="Texture" id=19]
[ext_resource path="res://Enemies/Zombie-sprite5.atlastex" type="Texture" id=20]
[ext_resource path="res://Enemies/Zombie-sprite10.atlastex" type="Texture" id=21]
[ext_resource path="res://Enemies/Zombie-sprite12.atlastex" type="Texture" id=22]
[ext_resource path="res://Enemies/zombie.gd" type="Script" id=23]
[ext_resource path="res://Hit_Hurt_Boxes/HitBox.tscn" type="PackedScene" id=24]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=25]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.tscn" type="PackedScene" id=26]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.gd" type="Script" id=27]
[ext_resource path="res://stats.tscn" type="PackedScene" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 21 ), ExtResource( 10 ), ExtResource( 22 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 6.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.6633
height = 31.5572

[sub_resource type="CircleShape2D" id=4]
radius = 239.902

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.505882, 0.0862745, 0.0862745, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.894118, 0.905882, 0.470588, 0.490196 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.0470588, 0.0470588, 1 )
border_blend = true

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 108, 87 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 23 )

[node name="Stats" parent="." instance=ExtResource( 28 )]
max_health = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "attack"
frame = 10
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="HitBox" parent="." instance=ExtResource( 24 )]
collision_layer = 64
collision_mask = 4
damage = 5

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -4.76837e-07, -1 )
rotation = -0.443314
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="HitBox"]
autostart = true

[node name="PlayerDet" parent="." instance=ExtResource( 25 )]
position = Vector2( 0, 0 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDet"]
shape = SubResource( 4 )

[node name="HurtBox" parent="." instance=ExtResource( 26 )]
collision_layer = 16
collision_mask = 0
script = ExtResource( 27 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -15.0
margin_top = -35.0
margin_right = 22.0
margin_bottom = -31.0
theme = SubResource( 5 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
max_value = 10.0
value = 10.0
percent_visible = false

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="HitBox/Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]

[editable path="HitBox"]
[editable path="PlayerDet"]
[editable path="HurtBox"]
